# FRI-ReinforcementLearning-C

./: CMakeLists.txt  README.md  config.h.in
examples/: CMakeLists.txt
examples/acrobot/: CMakeLists.txt  acrobot.c
examples/cartpole/: CMakeLists.txt  cartpole.c
examples/mountaincar/: CMakeLists.txt  mountaincar.c
src/: CMakeLists.txt
src/five/: CMakeLists.txt  FIVE.h  FIVEGScFunc.c  FIVEGVagEnv.c  FIVEInit.c  FIVEVagConcl.c  FIVEVagConclWeight.c  FIVEVagConcl_FRIRL_BestAct.c  FIVEValVag.c  five_add_rule.c  five_deinit.c  five_remove_rule.c  five_rule_distance.c  five_vague_distance.c  five_vague_distance_parallel.c
src/frirl/: CMakeLists.txt  frirl.h  frirl_agent.c  frirl_app_helpers.c  frirl_app_helpers.h  frirl_check_possible_states.c  frirl_deinit.c  frirl_e_greedy_selection.c  frirl_episode.c  frirl_get_best_action.c  frirl_imitation.c  frirl_imitation.h  frirl_init.c  frirl_init_rb.c  frirl_init_ve.c  frirl_sequential_run.c  frirl_test.h  frirl_test_run.c  frirl_types.h  frirl_types_def.h  frirl_update_sarsa.c  frirl_utils.c  frirl_utils.h
src/gui/: CMakeLists.txt  color.c  color.h  draw.c  draw.h  gui.h  init.c  init.h
src/inl/: CMakeLists.txt  arr.inl  eucledian.inl  fast_abs.inl  fast_pow.inl  fast_sqrt.inl  max.inl  min.inl  sort.inl
tests/: CMakeLists.txt  README.md  _test.sh  test_ALL.sh  test_acrobot.sh  test_cartpole.sh  test_mountaincar.sh
tests/orig/: frirl_example_acrobot.frirlrb.txt  frirl_example_cartpole.frirlrb.txt  frirl_example_mountaincar.frirlrb.txt
